using LocalitiesManager.Data.Entities;

namespace LocalitiesManager.Data.Repositories.Interfaces;

public interface IOwnerRepository : IRepositoryBase<Owner>
{
}